# esp32c6touch147

./: .gitignore
axs5106/: Cargo.toml
axs5106/src/: lib.rs
demos/: Cargo.toml  build.rs
demos/src/asserts/: hello.c
demos/src/assets/: hello.c
jd9853/: Cargo.toml
jd9853/src/: lib.rs
qmi8658/: Cargo.toml
qmi8658/src/: lib.rs
