[package]
edition = "2024"
name = "demos"
rust-version = "1.88"
version = "0.1.0"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32c6", "unstable", "log-04"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6", "log-04"] }
log = "0.4.27"

axs5106 = { path = "../axs5106" }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
esp-alloc = "0.9.0"
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["log"] }
esp-backtrace = { version = "0.18.1", features = [
  "esp32c6",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32c6", "log-04"] }
bt-hci = "0.6.0"
esp-radio = { version = "0.17.0", features = [
  "ble",
  "esp-alloc",
  "esp32c6",
  "unstable",
] }
jd9853 = { path = "../jd9853", features = ["graphics", "async"] }
lvgl-font-bridge = { git = "https://github.com/fan2nd/lvgl-font-bridge", rev = "a0cb3dd" }
qmi8658 = { path = "../qmi8658" }
static_cell = "2.1.1"
trouble-host = { version = "0.5.0", features = ["gatt"] }
embedded-qr = "0.1.0"
u8g2-fonts = "0.6.0"
embedded-bitmap-font = { git = "https://github.com/fan2nd/embedded-text.git", rev = "ba3d236" }
embedded-bitmap-font-macros = { git = "https://github.com/fan2nd/embedded-text.git", rev = "ba3d236" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[package.metadata.cargo-machete]
ignored = ["esp-bootloader-esp-idf"]

[workspace]
