[package]
name = "jd9853"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[features]
default = ["blocking"]
blocking = []
async = ["dep:embedded-hal-async"]
graphics = ["dep:embedded-graphics-core", "blocking"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
embedded-graphics-core = { version = "0.4.0", optional = true }
